feat(ai): 重构 AI聊天功能
- 重命名相关类和接口，如 BusAiChat 改为 BusAiChatDialog，IBusAiChatService 改为 IBusAiChatDialogService- 新增 BusAiChatDialogMessage 实体和相关功能
-优化 AIRequestChatUtil 类，增加 done 参数
- 更新 BusAiChatUtil 类，支持新的对话消息结构
- 调整 Websocket 相关代码，支持新的消息发送逻辑